
# can use ls | tr '\n' '\n' >listing.txt

GEDA_BITMAPS      = $(GEDADATADIR)/bitmaps
bitmapdatadir     = $(GEDA_BITMAPS)
bitmapdata_16dir  = $(GEDA_BITMAPS)/16x16
bitmapdata_22dir  = $(GEDA_BITMAPS)/22x22
bitmapdata_24dir  = $(GEDA_BITMAPS)/24x24
bitmapdata_26dir  = $(GEDA_BITMAPS)/26x26
bitmapdata_28dir  = $(GEDA_BITMAPS)/28x28
bitmapdata_32dir  = $(GEDA_BITMAPS)/32x32
bitmapdata_36dir  = $(GEDA_BITMAPS)/36x36
bitmapdata_48dir  = $(GEDA_BITMAPS)/48x48
bitmapdata_64dir  = $(GEDA_BITMAPS)/64x64
bitmapdata_96dir  = $(GEDA_BITMAPS)/96x96
bitmapdata_128dir = $(GEDA_BITMAPS)/128x128
bitmapdata_256dir = $(GEDA_BITMAPS)/256x256

bitmapdata_DATA   = \
			close_box.png                      \
			gaf-add-attribute.png              \
			gaf-bom.png                        \
			gaf-demote.png                     \
			gaf-hierarchy-sch.png              \
			gaf-hierarchy-sym.png              \
			gaf-hierarchy-up.png               \
			gaf-pdf.png                        \
			gaf-promote.png                    \
			gaf-see-notes.png                  \
			gaf-tools.png                      \
			geda-analysis.png                  \
			geda-bus.png                       \
			geda-arc.png                       \
			geda-arc-edit.png                  \
			geda-arc-edit2.png                 \
			geda-autonum-blue.png              \
			geda-autonum-green.png             \
			geda-autonum-red.png               \
			geda-bed.png                       \
			geda-box.png                       \
			geda_bulb_24x26_off.png            \
			geda_bulb_24x26_on.png             \
			geda-calculate.png                 \
			geda-check-grn.png                 \
			geda-check-org.png                 \
			geda-check-red.png                 \
			geda-circle.png                    \
			geda-circles.png                   \
			geda-close.png                     \
			geda-close-all.png                 \
			geda-component.png                 \
			geda-copy.png                      \
			geda-demote.png                    \
			geda-deselect.png                  \
			geda_demote_16x16.png              \
			geda_demote_grn_16x16.png          \
			geda-design.png                    \
			geda-design1.png                   \
			geda-design2.png                   \
			geda-design3.png                   \
			geda-design4.png                   \
			geda-display.png                   \
			geda-display-color.png             \
			geda-draft.png                     \
			geda-film-roll.png                 \
			geda-find.png                      \
			geda-find-attribute.png  \
			geda-grid-dot.png                  \
			geda-grid-mesh.png                 \
			geda-icprint.png                   \
			geda-inbed.png                     \
			geda-inspect-grn.png               \
			geda-invisible.png                 \
			geda-lightning.png                 \
			geda-line.png                      \
			geda-line-type.png                 \
			geda-lock.png                      \
			geda-marker.png                    \
			geda-magnet.png                    \
			geda-mesh.png                      \
			geda-mirror.png                    \
			geda-molecule.png                  \
			geda-move.png                      \
			geda-multi.png                     \
			geda-name-tag.png                  \
			geda-name-value.png                \
			geda-nand.png                      \
			geda-nand3.png                     \
			geda-net.png                       \
			geda-new.png                       \
			geda-node.png                      \
			geda-npn.png                       \
			geda-offset.png                    \
			geda-open-recent.png               \
			geda-path.png                      \
			geda-pin.png                       \
			geda-pin-type.png                  \
			geda-plot.png                      \
			geda-probe.png                     \
			geda-probe2.png                    \
			geda-promote.png                   \
			geda-prompt.png                    \
			geda-properties.png                \
			geda-redo.png                      \
			geda-rotate-left.png               \
			geda-save-image.png                \
			geda-schem.png                     \
			geda-schem2.png                    \
			geda-scope.png                     \
			geda-scope2.png                    \
			geda-scopehairs.png                \
			geda-select.png                    \
			geda-slot.png                      \
			geda-snap.png                      \
			geda-snap-off.png                  \
			geda-snap-on.png                   \
			geda-show-nets.png                 \
			geda-simulate.png                  \
			geda-sinx.png                      \
			geda-spectrum.png                  \
			geda_switch_48x36_off.png          \
			geda_switch_48x36_on.png           \
			geda_switch_64x48_off.png          \
			geda_switch_64x48_on.png           \
			geda-text-editor.png               \
			geda-tools.png                     \
			geda-translate.png                 \
			geda-trash-can.png                 \
			geda-undo.png                      \
			geda-unlock.png                    \
			geda-unselect-all.png              \
			geda-value.png                     \
			geda-verilog-blue.png              \
			geda-verilog-grn.png               \
			geda-view-redraw.png               \
			geda-wave.png                      \
			geda-waves.png                     \
			geda-xml.png                       \
			geda-zoom-box.png                  \
			geda-zoom-extents.png              \
			geda-zoom-in.png                   \
			geda-zoom-limits.png               \
			geda-zoom-out.png                  \
			geda-zoom-pan.png                  \
			geda-zoom-selection.png            \
			git-logo.png                       \
			guile-logo.png

bitmapdata_16_DATA = \
					 geda_analysis_16x16.png            \
					 geda_calculate_16x16.png           \
					 geda_design_16x16.png              \
					 geda_design1_16x16.png             \
					 geda_design2_16x16.png             \
					 geda_design3_16x16.png             \
					 geda_design4_16x16.png             \
					 geda_draft_16x16.png               \
					 geda_find_16x16.xpm                \
					 geda_find_and_replace_16x16.xpm    \
					 geda_icprint_16x16.png             \
					 geda_marker_16x16.png              \
					 geda_molecule_16x16.png            \
					 geda_name_tag_16x16.xpm            \
					 geda_nand3_16x16.png               \
					 geda_nand_16x16.png                \
					 geda_node_16x16.png                \
					 geda_npn_16x16.png                 \
					 geda_plot_16x16.png                \
					 geda_probe2_16x16.png              \
					 geda_probe_16x16.png               \
					 geda_schem2_16x16.png              \
					 geda_schem_16x16.png               \
					 geda_scope_16x16.png               \
					 geda_scope2_16x16.png              \
					 geda_scopehairs_16x16.png          \
					 geda_simulate_16x16.png            \
					 geda_sinx_16x16.png                \
					 geda_spectrum_16x16.png            \
					 geda_value_16x16.xpm               \
					 geda_wave_16x16.png                \
					 geda_waves_16x16.png

bitmapdata_22_DATA = \
					 gaf_add_attribute_22x22.png        \
					 gaf_demote_22x22.png               \
					 gaf_pdf_22x22.xpm                  \
					 gaf_promote_22x22.png              \
					 gaf_tools_22x22.xpm                \
					 geda_analysis_22x22.png            \
					 geda_arc_22x22.png                 \
					 geda_arc_edit_22x22.png            \
					 geda_box_22x22.png                 \
					 geda_calculate_22x22.png           \
					 geda_copy_22x22.png                \
					 geda_circle_22x22.xpm              \
					 geda_circles_22x22.png             \
					 geda_demote_22x22.png              \
					 geda_demote_grn_22x22.png          \
					 geda_deselect_22x22.png            \
					 geda_design_22x22.png              \
					 geda_design1_22x22.png             \
					 geda_design2_22x22.png             \
					 geda_design3_22x22.png             \
					 geda_design4_22x22.png             \
					 geda_display_22x22.png             \
					 geda_display_color_22x22.xpm       \
					 geda_draft_22x22.png               \
					 geda_eye_glasses_22x16.png         \
					 geda_grid_dot_22x22.png            \
					 geda_grid_mesh_22x22.png           \
					 geda_find_22x22.xpm                \
					 geda_find_and_replace_22x22.xpm    \
					 geda_find_attribute_22x22.png      \
					 geda_icprint_22x22.png             \
					 geda_line_22x22.xpm                \
					 geda_line_type_22x22.png           \
					 geda_locate_reference_22x22.xpm    \
					 geda_lock_22x22.png                \
					 geda_magnet_22x22.png              \
					 geda_marker_22x22.png              \
					 geda_mesh_22x22.png                \
					 geda_mirror_22x22.png              \
					 geda_molecule_22x22.png            \
					 geda_move_22x22.png                \
					 geda_multi_22x22.png               \
					 geda_name_tag_22x22.xpm            \
					 geda_name_value_22x22.xpm          \
					 geda_nand_22x22.png                \
					 geda_nand3_22x22.png               \
					 geda_npn_22x22.png                 \
					 geda_node_22x22.png                \
					 geda_number_22x22.png              \
					 geda_pin_22x22.png                 \
					 geda_plot_22x22.png                \
					 geda_probe_22x22.png               \
					 geda_probe2_22x22.png              \
					 geda_promote_22x22.png             \
					 geda_redcross_22x22.xpm            \
					 geda_rotate_left_22x22.png         \
					 geda_schem2_22x22.png              \
					 geda_schem_22x22.png               \
					 geda_scope2_22x22.png              \
					 geda_scope_22x22.png               \
					 geda_scopehairs_22x22.png          \
					 geda_select_22x22.png              \
					 geda_sheets_22x22.xpm              \
					 geda_simulate_22x22.png            \
					 geda_sinx_22x22.png                \
					 geda_snap_off_22x22.png            \
					 geda_snap_on_22x22.png             \
					 geda_spectrum_22x22.png            \
					 geda_tools_22x22.xpm               \
					 geda_translate_22x22.png           \
					 geda_unlock_22x22.png              \
					 geda_value_22x22.xpm               \
					 geda_view_redraw_22x22.png         \
					 geda_wave_22x22.png                \
					 geda_waves_22x22.png               \
					 geda_zoom_box_22x22.png            \
					 geda_zoom_extents_22x22.png        \
					 geda_zoom_limits_22x22.png         \
					 geda_zoom_in_22x22.png             \
					 geda_zoom_out_22x22.png            \
					 geda_zoom_pan_22x22.png            \
					 ghost_invisible_22x22.xpm          \
					 gschem_project_close_22x22.png

bitmapdata_24_DATA = \
					 gaf_add_attribute_24x24.png        \
					 gaf_demote_24x24.png               \
					 gaf_pdf_24x24.xpm                  \
					 gaf_promote_24x24.png              \
					 gaf_tools_24x24.xpm                \
					 geda_arc_24x24.png                 \
					 geda_arc_edit_24x24.png            \
					 geda_box_24x24.png                 \
					 geda_calculate_24x24.png           \
					 geda_copy_24x24.png                \
					 geda_circle_24x24.xpm              \
					 geda_circles_24x24.png             \
					 geda_display_24x24.png             \
					 geda_display_color_24x24.xpm       \
					 geda_demote_24x24.png              \
					 geda_demote_grn_24x24.png          \
					 geda_deselect_24x24.png            \
					 geda_design_24x24.png              \
					 geda_design1_24x24.png             \
					 geda_design2_24x24.png             \
					 geda_design3_24x24.png             \
					 geda_design4_24x24.png             \
					 geda_draft_24x24.png               \
					 geda_film_roll_24x24.xpm           \
					 geda_find_24x24.xpm                \
					 geda_find_and_replace_24x24.xpm    \
					 geda_find_attribute_24x24.png      \
					 geda_grid_dot_24x24.png            \
					 geda_grid_mesh_24x24.png           \
					 geda_icprint_24x24.png             \
					 geda_line_24x24.xpm                \
					 geda_line_type_24x24.png           \
					 geda_locate_reference_24x24.xpm    \
					 geda_lock_24x24.png                \
					 geda_magnet_24x24.png              \
					 geda_marker_24x24.png              \
					 geda_mesh_24x24.png                \
					 geda_mirror_24x24.png              \
					 geda_molecule_24x24.png            \
					 geda_move_24x24.png                \
					 geda_multi_24x24.png               \
					 geda_name_tag_24x24.xpm            \
					 geda_name_value_24x24.xpm          \
					 geda_nand_24x24.png                \
					 geda_nand3_24x24.png               \
					 geda_npn_24x24.png                 \
					 geda_node_24x24.png                \
					 geda_number_24x24.png              \
					 geda_pin_24x24.png                 \
					 geda_plot_24x24.png                \
					 geda_probe_24x24.png               \
					 geda_probe2_24x24.png              \
					 geda_promote_24x24.png             \
					 geda_redcross_24x24.xpm            \
					 geda_rotate_left_24x24.png         \
					 geda_schem2_24x24.png              \
					 geda_schem_24x24.png               \
					 geda_scope2_24x24.png              \
					 geda_scope_24x24.png               \
					 geda_scopehairs_24x24.png          \
					 geda_select_24x24.png              \
					 geda_sheets_24x24.xpm              \
					 geda_simulate_24x24.png            \
					 geda_sinx_24x24.png                \
					 geda_snap_off_24x24.png            \
					 geda_snap_on_24x24.png             \
					 geda_spectrum_24x24.png            \
					 geda_tools_24x24.xpm               \
					 geda_translate_24x24.png           \
					 geda_unlock_24x24.png              \
					 geda_value_24x24.xpm               \
					 geda_view_redraw_24x24.png         \
					 geda_wave_24x24.png                \
					 geda_waves_24x24.png               \
					 geda_zoom_box_24x24.png            \
					 geda_zoom_extents_24x24.png        \
					 geda_zoom_limits_24x24.png         \
					 geda_zoom_in_24x24.png             \
					 geda_zoom_out_24x24.png            \
					 geda_zoom_pan_24x24.png            \
					 ghost_invisible_24x24.xpm          \
					 gschem_project_close_24x24.png

bitmapdata_26_DATA = \
					 gaf_add_attribute_26x26.png        \
					 gaf_demote_26x26.png               \
					 geda_deselect_26x26.png            \
					 gaf_pdf_26x26.xpm                  \
					 gaf_promote_26x26.png              \
					 gaf_tools_26x26.xpm                \
					 geda_analysis_24x24.png            \
					 geda_arc_26x26.png                 \
					 geda_arc_edit_26x26.png            \
					 geda_box_26x26.png                 \
					 geda_copy_26x26.png                \
					 geda_circle_26x26.xpm              \
					 geda_circles_26x26.png             \
					 geda_demote_26x26.png              \
					 geda_demote_grn_26x26.png          \
					 geda_display_26x26.png             \
					 geda_display_color_26x26.xpm       \
					 geda_film_roll_26x26.xpm           \
					 geda_find_26x26.xpm                \
					 geda_find_attribute_26x26.png      \
					 geda_grid_dot_26x26.png            \
					 geda_grid_mesh_26x26.png           \
					 geda_line_26x26.xpm                \
					 geda_line_type_26x26.png           \
					 geda_locate_reference_26x26.xpm    \
					 geda_lock_26x26.png                \
					 geda_magnet_26x26.png              \
					 geda_mesh_26x26.png                \
					 geda_mirror_26x26.png              \
					 geda_move_26x26.png                \
					 geda_multi_26x26.png               \
					 geda_name_value_26x26.xpm          \
					 geda_name_tag_26x26.xpm            \
					 geda_number_26x26.png              \
					 geda_pin_26x26.png                 \
					 geda_promote_26x26.png             \
					 geda_redcross_26x26.xpm            \
					 geda_rotate_left_26x26.png         \
					 geda_sheets_26x26.xpm              \
					 geda_select_26x26.png              \
					 geda_snap_off_26x26.png            \
					 geda_snap_on_26x26.png             \
					 geda_tools_26x26.xpm               \
					 geda_translate_26x26.png           \
					 geda_value_26x26.xpm               \
					 geda_view_redraw_26x26.png         \
					 geda_unlock_26x26.png              \
					 geda_zoom_box_26x26.png            \
					 geda_zoom_extents_26x26.png        \
					 geda_zoom_limits_26x26.png         \
					 geda_zoom_in_26x26.png             \
					 geda_zoom_out_26x26.png            \
					 geda_zoom_pan_26x26.png            \
					 gschem_project_close_26x26.png

bitmapdata_28_DATA = \
					 gaf_add_attribute_28x28.png        \
					 gaf_demote_28x28.png               \
					 gaf_pdf_28x28.xpm                  \
					 gaf_promote_28x28.png              \
					 gaf_see_notes_28x20.png            \
					 gaf_tools_28x28.xpm                \
					 geda_analysis_28x28.png            \
					 geda_arc_28x28.png                 \
					 geda_arc_edit_28x28.png            \
					 geda_box_28x28.png                 \
					 geda_calculate_28x28.png           \
					 geda_copy_28x28.png                \
					 geda_circle_28x28.xpm              \
					 geda_circles_28x28.png             \
					 geda_display_28x28.png             \
					 geda_display_color_28x28.xpm       \
					 geda_draft_28x28.png               \
					 geda_demote_28x28.png              \
					 geda_demote_grn_28x28.png          \
					 geda_deselect_28x28.png            \
					 geda_design_28x28.png              \
					 geda_design1_28x28.png             \
					 geda_design2_28x28.png             \
					 geda_design3_28x28.png             \
					 geda_design4_28x28.png             \
					 geda_eye_glasses_28x20.png         \
					 geda_film_roll_28x28.xpm           \
					 geda_find_28x28.xpm                \
					 geda_find_attribute_28x28.png      \
					 geda_grid_dot_28x28.png            \
					 geda_grid_mesh_28x28.png           \
					 geda_icprint_28x28.png             \
					 geda_line_28x28.xpm                \
					 geda_line_type_28x28.png           \
					 geda_locate_reference_28x28.xpm    \
					 geda_lock_28x28.png                \
					 geda_magnet_28x28.png              \
					 geda_marker_28x28.png              \
					 geda_mesh_28x28.png                \
					 geda_mirror_28x28.png              \
					 geda_molecule_28x28.png            \
					 geda_move_28x28.png                \
					 geda_multi_28x28.png               \
					 geda_name_value_28x28.xpm          \
					 geda_name_tag_28x28.xpm            \
					 geda_nand_28x28.png                \
					 geda_nand3_28x28.png               \
					 geda_npn_28x28.png                 \
					 geda_node_28x28.png                \
					 geda_number_28x28.png              \
					 geda_pin_28x28.png                 \
					 geda_plot_28x28.png                \
					 geda_probe_28x28.png               \
					 geda_probe2_28x28.png              \
					 geda_promote_28x28.png             \
					 geda_redcross_28x28.xpm            \
					 geda_rotate_left_28x28.png         \
					 geda_schem2_28x28.png              \
					 geda_schem_28x28.png               \
					 geda_scope2_28x28.png              \
					 geda_scope_28x28.png               \
					 geda_scopehairs_28x28.png          \
					 geda_select_28x28.png              \
					 geda_sheets_28x28.xpm              \
					 geda_simulate_28x28.png            \
					 geda_sinx_28x28.png                \
					 geda_snap_off_28x28.png            \
					 geda_snap_on_28x28.png             \
					 geda_spectrum_28x28.png            \
					 geda_tools_28x28.xpm               \
					 geda_translate_28x28.png           \
					 geda_unlock_28x28.png              \
					 geda_value_28x28.xpm               \
					 geda_view_redraw_28x28.png         \
					 geda_wave_28x28.png                \
					 geda_waves_28x28.png               \
					 geda_zoom_box_28x28.png            \
					 geda_zoom_extents_28x28.png        \
					 geda_zoom_limits_28x28.png         \
					 geda_zoom_in_28x28.png             \
					 geda_zoom_out_28x28.png            \
					 geda_zoom_pan_28x28.png            \
					 ghost_invisible_28x28.xpm          \
					 gschem_project_close_28x28.png

bitmapdata_32_DATA = \
					 gaf_add_attribute_32x32.png        \
					 gaf_demote_32x32.png               \
					 gaf_pdf_32x32.xpm                  \
					 gaf_promote_32x32.png              \
					 gaf_see_notes_32x23.png            \
					 gaf_tools_32x32.xpm                \
					 geda_analysis_32x32.png            \
					 geda_arc_32x32.png                 \
					 geda_arc_edit_32x32.png            \
					 geda_box_32x32.png                 \
					 geda_calculate_32x32.png           \
					 geda_circle_32x32.xpm              \
					 geda_circles_32x32.png             \
					 geda_copy_32x32.png                \
					 geda_demote_32x32.png              \
					 geda_demote_grn_32x32.png          \
					 geda_deselect_32x32.png            \
					 geda_design_32x32.png              \
					 geda_design1_32x32.png             \
					 geda_design2_32x32.png             \
					 geda_design3_32x32.png             \
					 geda_design4_32x32.png             \
					 geda_display_32x32.png             \
					 geda_display_color_32x32.xpm       \
					 geda_draft_32x32.png               \
					 geda_eye_glasses_32x23.png         \
					 geda_film_roll_32x32.xpm           \
					 geda_find_32x32.xpm                \
					 geda_find_and_replace_32x32.xpm    \
					 geda_find_attribute_32x32.png      \
					 geda_grid_dot_32x32.png            \
					 geda_grid_mesh_32x32.png           \
					 geda_icprint_32x32.png             \
					 geda_line_32x32.xpm                \
					 geda_line_type_32x32.png           \
					 geda_lock_32x32.png                \
					 geda_locate_reference_32x32.xpm    \
					 geda_magnet_32x32.png              \
					 geda_marker_32x32.png              \
					 geda_mesh_32x32.png                \
					 geda_mirror_32x32.png              \
					 geda_molecule_32x32.png            \
					 geda_move_32x32.png                \
					 geda_multi_32x32.png               \
					 geda_name_tag_32x32.xpm            \
					 geda_name_value_32x32.xpm          \
					 geda_nand_32x32.png                \
					 geda_nand3_32x32.png               \
					 geda_npn_32x32.png                 \
					 geda_node_32x32.png                \
					 geda_number_32x32.png              \
					 geda_pin_32x32.png                 \
					 geda_plot_32x32.png                \
					 geda_probe_32x32.png               \
					 geda_probe2_32x32.png              \
					 geda_promote_32x32.png             \
					 geda_redcross_32x32.xpm            \
					 geda_rotate_left_32x32.png         \
					 geda_schem2_32x32.png              \
					 geda_schem_32x32.png               \
					 geda_scope2_32x32.png              \
					 geda_scope_32x32.png               \
					 geda_scopehairs_32x32.png          \
					 geda_select_32x32.png              \
					 geda_sheets_32x32.xpm              \
					 geda_simulate_32x32.png            \
					 geda_sinx_32x32.png                \
					 geda_snap_off_32x32.png            \
					 geda_snap_on_32x32.png             \
					 geda_spectrum_32x32.png            \
					 geda_tools_32x32.xpm               \
					 geda_translate_32x32.png           \
					 geda_unlock_32x32.png              \
					 geda_value_32x32.xpm               \
					 geda_wave_32x32.png                \
					 geda_waves_32x32.png               \
					 geda_view_redraw_32x32.png         \
					 geda_zoom_box_32x32.png            \
					 geda_zoom_extents_32x32.png        \
					 geda_zoom_limits_32x32.png         \
					 geda_zoom_in_32x32.png             \
					 geda_zoom_out_32x32.png            \
					 geda_zoom_pan_32x32.png            \
					 ghost_invisible_32x32.xpm          \
					 gschem_project_close_32x32.png

bitmapdata_36_DATA = \
					 gaf_see_notes_36x26.png            \
					 geda_eye_glasses_36x26.png         \
					 geda_find_36x36.xpm                \
					 geda_find_and_replace_36x36.xpm    \
					 geda_name_tag_36x36.xpm            \
					 geda_name_value_36x36.xpm          \
					 geda_redcross_32x32.xpm            \
					 geda_value_36x36.xpm

bitmapdata_48_DATA = \
					 geda_demote_48x48.xpm              \
					 geda_arc_edit_48x48.png            \
					 geda_find_48x48.xpm                \
					 geda_find_and_replace_48x48.xpm    \
					 geda_redcross_48x48.xpm

bitmapdata_64_DATA = \
					 geda_find_64x64.xpm                \
					 geda_find_and_replace_64x64.xpm    \
					 geda_redcross_64x64.xpm            \
					 geda_zoom_pan_64x64.png

bitmapdata_96_DATA = \
					 geda_find_96x96.xpm                \
					 geda_find_and_replace_96x96.xpm    \
					 geda_redcross_96x96.xpm

bitmapdata_128_DATA = \
					 gaf_pdf_128x128.xpm               \
					 gaf_tools_128x128.xpm             \
					 geda_display_color_128x128.xpm    \
					 geda_film_roll_128x128.xpm        \
					 geda_find_128x128.xpm             \
					 geda_find_and_replace_128x128.xpm \
					 geda_man_128x128.xpm              \
					 geda_redcross_128x128.xpm         \
					 geda_tools_128x128.xpm            \
					 geda_zoom_selection_128x128.png

bitmapdata_256_DATA = \
					 ghost_invisible_256x256.xpm       \
					 geda_value_256x256.png

EXTRA_DIST = $(bitmapdata_DATA)     \
             $(bitmapdata_16_DATA)  \
             $(bitmapdata_22_DATA)  \
             $(bitmapdata_24_DATA)  \
             $(bitmapdata_26_DATA)  \
             $(bitmapdata_28_DATA)  \
             $(bitmapdata_32_DATA)  \
             $(bitmapdata_36_DATA)  \
             $(bitmapdata_48_DATA)  \
             $(bitmapdata_64_DATA)  \
             $(bitmapdata_96_DATA)  \
             $(bitmapdata_128_DATA) \
             $(bitmapdata_256_DATA) \
             README

MOSTLYCLEANFILES     = *~
CLEANFILES           = svg/*~ *~
DISTCLEANFILES       = svg/*~ *~ core FILE
MAINTAINERCLEANFILES = svg/*~ *~ Makefile.in
