## $Id$
##
## There does not seem to be any reason to use Auto-tools here
## Just use static Makefile

noinst_HEADERS  = ascii.h \
                  geda.h \
                  geda_bitmaps.h \
                  geda_debug.h \
                  geda_dialog_controls.h \
                  geda_enum.h \
                  geda_gui_funcs.h \
                  geda_idefines.h \
                  geda_sdefines.h \
                  geda_macros.h \
                  geda_standard.h \
		  geda_stat.h \
                  geda_struct.h \
		  geda_system.h \
                  geda_toolbars.h \
                  geda_types.h \
                  gettext.h \
                  missing.h

EXTRA_DIST      = $(noinst_HEADERS)

distcheck:

MOSTLYCLEANFILES        = *~
CLEANFILES              = *~
DISTCLEANFILES          = *~
MAINTAINERCLEANFILES    = *~ Makefile.in ChangeLog
